<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context=".activity.PortfolioActivity">

    <TextView
        android:id="@+id/portfolioTitle"
        android:layout_width="377dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/portfolioTitle"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/browseButton3"
        android:layout_width="119dp"
        android:layout_height="51dp"
        android:background="@color/colorAccent"
        android:text="@string/browseButtonText"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/portfolioButton3"
        android:layout_width="119dp"
        android:layout_height="51dp"
        android:background="@color/colorAccentLight"
        android:clickable="false"
        android:text="@string/portfolioButtonText"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/converterButton3"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toEndOf="@+id/browseButton3" />

    <Button
        android:id="@+id/converterButton3"
        android:layout_width="119dp"
        android:layout_height="51dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorBackground"
        android:text="@string/converterButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/portfolioList"
        android:layout_width="370dp"
        android:layout_height="359dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@color/colorBackgroundLight"
        android:divider="@color/colorPrimaryDark"
        android:dividerHeight="1dp"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:textColor="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portfolioTitle" />

    <Button
        android:id="@+id/createPortfolioButton"
        android:layout_width="327dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/ic_action_add"
        android:text="@string/create_portfolio_button_text"
        android:background="@color/colorAccent"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toTopOf="@+id/portfolioButton3"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableTint="@color/colorBackground"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newPortfolioNameInput"
        android:layout_width="194dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        android:background="@color/colorPrimaryLightest"
        android:ems="10"
        android:hint="@string/portfolio_name_button_text"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/portfolioButton3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portfolioList"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/portfolioCancelButton"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:drawableStart="@drawable/ic_action_cancel"
        android:drawableTint="@color/colorBackground"
        android:gravity="center_horizontal|top"
        android:textColor="@color/colorBackground"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/portfolioButton3"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portfolioList"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/finishPortfolioCreationButton"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:drawableStart="@drawable/ic_action_add"
        android:drawableTint="@color/colorBackground"
        android:gravity="center"
        android:textColor="@color/colorBackground"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/portfolioButton3"
        app:layout_constraintEnd_toStartOf="@+id/portfolioCancelButton"
        app:layout_constraintStart_toEndOf="@+id/newPortfolioNameInput"
        android:padding="7dp"
        app:layout_constraintTop_toBottomOf="@+id/portfolioList"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/portfolioListErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portfolioList" />
</android.support.constraint.ConstraintLayout>