<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context=".activity.CurrencyCalculatorActivity">

    <TextView
        android:id="@+id/loadingText3"
        android:layout_width="253dp"
        android:layout_height="209dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="Stocks failed to load. Check network and try again"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/search_view"
        app:layout_constraintStart_toStartOf="@+id/search_view"
        app:layout_constraintTop_toTopOf="@+id/search_view" />

    <com.miguelcatalan.materialsearchview.MaterialSearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:searchBackground="@color/colorPrimary"
        app:searchSuggestionBackground="@color/colorPrimary"
        />

    <ListView
        android:id="@+id/stockListView"
        style="@style/Widget.AppCompat.ListView.DropDown"
        android:layout_width="369dp"


        android:layout_height="532dp"
        android:layout_marginTop="56dp"
        android:background="@color/colorBackgroundLight"
        android:divider="@color/colorPrimaryDark"
        android:dividerHeight="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_view" />


    <Button
        android:id="@+id/browseButton"
        android:layout_width="119dp"
        android:layout_height="51dp"
        android:background="@color/colorAccentLight"
        android:clickable="false"
        android:text="@string/browseButtonText"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/portfolioButton"
        android:layout_width="119dp"
        android:layout_height="51dp"
        android:background="@color/colorAccent"
        android:text="@string/portfolioButtonText"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/converterButton"
        app:layout_constraintStart_toEndOf="@+id/browseButton" />

    <Button
        android:id="@+id/converterButton"
        android:layout_width="119dp"
        android:layout_height="51dp"
        android:background="@color/colorAccent"
        android:text="@string/converterButtonText"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/searchPromptTextView"
        android:layout_width="298dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:drawableEnd="@drawable/ic_action_arrow_top"
        android:gravity="center"
        android:text="Use this to find relevant stocks"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_view" />

</android.support.constraint.ConstraintLayout>